--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "family labum",
+  "description": "family album",
   "private": true,
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -e ts,js,json --watch ./src --watch server.ts --exec 'npm run build; node ./dist/server.js'",
-    "clean": "rm -rf ./dist/*",
-    "build": "npm run clean; tsc -p tsconfig.json"
+    "start": "npm run build; node ./dist/server.js --port 8000",
+    "watch": "nodemon -e ts,js,json --watch ./src --watch server.ts --exec 'npm run start'",
+    "clean": "rm -rf ./dist/* 2> /dev/null",
+    "build": "npm run clean; webpack --config=webpack.config.js",
+    "sync": "rm -rf node_modules 2> /dev/null; rm -rf dist 2> /dev/null; scp -r ../backend rsainchuk@192.168.31.23:/home/rsainchuk/backend"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/koa": "^2.11.3",
     "@types/node": "^13.9.5",
+    "graphql": "^15.0.0",
     "koa": "^2.11.0",
+    "koa-graphql": "^0.8.0",
     "postgres": "^1.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "file-loader": "^6.0.0",
+    "nodemon": "^2.0.2",
+    "raw-loader": "^4.0.1",
+    "ts-loader": "^7.0.2",
+    "webpack-cli": "^3.3.11"
   }
 }
