--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build; node ./dist/server.js --port 8000",
+    "start": "npm run build; node ./dist/server.js",
     "watch": "nodemon -e ts,js,json --watch ./src --watch server.ts --exec 'npm run start'",
     "clean": "rm -rf ./dist/* 2> /dev/null",
     "build": "npm run clean; webpack --config=webpack.config.js",
@@ -26,9 +26,7 @@
     "webpack": "^4.43.0"
   },
   "devDependencies": {
-    "file-loader": "^6.0.0",
     "nodemon": "^2.0.2",
-    "raw-loader": "^4.0.1",
     "ts-loader": "^7.0.2",
     "webpack-cli": "^3.3.11"
   }
